Singleton per setting e aggiustato bug sulle hit metodo intelligente a bordo pannello.